Base slayers are almost completed. Prototype skill system.